[tool.poetry]
name = "vaultwarden-api"
version = "0.1.0"
description = "RESTful API for the Vaultwarden platform"
authors = ["TheManchineel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
requests = "^2.31.0"
pydantic = "^2.4.2"
beautifulsoup4 = "^4.12.2"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
